app-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 5
  template:
    metadata:
      labels:
        app: dev
    spec:
      containers:
      - name: app-dev
        image: robertshand/python-hello-world:latest
        ports:
        - containerPort: 80
