app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  labels:
    app: dev
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: dev
