nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    lb: app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: dev
