service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  labels:
    app: dev
spec:
  type: LoadBalancer
  ports:
  - port: 80
    nodePort: 30001
    protocol: TCP
  selector:
    app: dev
