nginx-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: a20ae0cf3a6de11e79ecb0e397d5767c-1699060901.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /
        backend:
          serviceName: app-svc
          servicePort: 80
